# ImageEditing

./: CMakeLists.txt
src/: Main.cpp  ScriptHandler.cpp  TargaImage.cpp
